--- a/Person Phase3-constructors-1/ReadMe
+++ b/Person Phase3-constructors-1/ReadMe
@@ -1,14 +1,1 @@
-UNFINISHED
-In Person class define new methods
-      public Person() {
-          name = "noname";
-          age = 1;
-      }
-      public Person(String name) {
-          this.name = name;
-          age = 1;
-      }
-      public Person(String name, int age) {
-          this.name = name;
-          this.age = age;
-      }
+Phase 3 - Added constructor methods that can be used to instantiate object using data passed to constructor
